[package]
name = "cclint"
version = "0.1.0"
edition = "2024"
description = "Lint your Claude Code config. Find what's wasting tokens in your CLAUDE.md, hooks, and skills."
license = "MIT"
repository = "https://github.com/SingggggYee/cclint"
keywords = ["claude-code", "lint", "config", "tokens", "optimizer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
